# tensorloader

./: README.md  pyproject.toml  setup.py
src/tensorloader/: __init__.py  _loader.py
tests/: test_tensorloader.py
